# MyCVLibAndroid

./: settings.gradle
MyCVLibSampleApp/: build.gradle
MyCVLibSampleApp/src/androidTest/java/mycvlib/sample/com/mycvlibandroid/: ExampleInstrumentedTest.java
MyCVLibSampleApp/src/main/: AndroidManifest.xml
MyCVLibSampleApp/src/main/java/mycvlib/sample/com/mycvlibandroid/: AutoFitTextureView.java  BaseCameraView.java  Camera.java  Camera2BasicFragment.java  Camera2View.java  CameraBaseActivity.java  MainActivity.java
MyCVLibSampleApp/src/main/java/mycvlib/sample/com/mycvlibandroid/opengl/: DefaultCameraRenderer.java  EglHelper.java  GlUtil.java  TextureViewGLWrapper.java
MyCVLibSampleApp/src/main/res/layout/: activity_camera_base.xml  activity_main.xml  fragment_camera2_basic.xml
MyCVLibSampleApp/src/main/res/values/: strings.xml
MyCVLibSampleApp/src/test/java/mycvlib/sample/com/mycvlibandroid/: ExampleUnitTest.java
mycvlib/: build.gradle
mycvlib/src/androidTest/java/mycvlib/sample/com/mycvlib/: ExampleInstrumentedTest.java
mycvlib/src/main/: AndroidManifest.xml
mycvlib/src/main/cpp/mycvlib/: CMakeLists.txt
mycvlib/src/main/cpp/mycvlib/jni/: api.cpp
mycvlib/src/main/cpp/mycvlib/src/: mycvengine.cpp  mycvengine.h
mycvlib/src/main/java/mycvlib/sample/com/mycvlib/: Engine.java
mycvlib/src/main/res/values/: strings.xml
mycvlib/src/test/java/mycvlib/sample/com/mycvlib/: ExampleUnitTest.java
mycvlib_OLD/src/main/cpp/: mycvlib.cpp  mycvlib.h
mycvlib_OLD/src/main/java/mycvlib/sample/com/mycvlib/: MyCVLib.java
